# slide_aware_sst_minpaper

./: .gitignore  README.md
repo/: README.md  SMOKE_TEST_LOG.md  pyproject.toml
repo/configs/: chinese_lips_qwen3_diagnostic500_eval.yaml  chinese_lips_qwen3_hf_reference_pilot.yaml  chinese_lips_train.yaml  min_zh_en.yaml  qwen3_compact_repair_prompt.txt  qwen3_strict_repair_prompt.txt  term_aliases.yaml  vision_zh_en.yaml
repo/examples/: toy_visual_challenge.jsonl
repo/outputs/annotations/: pilot_candidates.csv
repo/outputs/data/: challenge_verified.jsonl
repo/outputs/index/: evidence.jsonl
repo/outputs/runs/naive_all_context/: outputs.jsonl
repo/outputs/tables/: evidence_selection.csv  latency.tex  main_results.csv  main_results.tex  robustness.csv  robustness.tex
repo/outputs/visual/annotation/: review_sheet.csv
repo/scripts/: audit_references.py  audit_visual_context_quality.py  build_chinese_lips_longform.py  build_chinese_lips_manifest.py  build_visual_context_index.py  build_visual_dataset.py  enrich_visual_context.py  evaluate.py  export_case_studies.py  extract_frames_by_manifest.py  generate_references.py  make_paper_tables.py  package_reference_generation_bundle.py  recover_zip_ppt_frames.py  repair_references.py  run_batched_reference_experiments.py  run_stream_translate.py  sample_diagnostic_subset.py
repo/tests/: test_audit_visual_context_quality.py  test_enrich_visual_context.py  test_export_diagnostic_review_sheet.py  test_pipeline.py  test_recover_zip_ppt_frames.py  test_reference_audit.py  test_training_data.py  test_visual_pipeline.py
(+175 files in other folders)
