[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "slidesst"
version = "0.0.1"
description = "Slide-aware contextual simultaneous speech translation scaffold"
requires-python = ">=3.10"
dependencies = [
  "pyyaml>=6.0",
  "pydantic>=2.0",
  "tqdm>=4.66",
  "numpy>=1.24",
  "pandas>=2.0",
  "sacrebleu>=2.4",
  "jieba>=0.42.1",
  "pypinyin>=0.50.0",
  "rank-bm25>=0.2.2"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
